<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp"
    android:layout_gravity="center">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radiogroup">

        <RadioButton
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_check_box"
            android:text="@string/classic" />

        <RadioButton
            android:id="@+id/work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_work"
            android:text="@string/work" />

        <RadioButton
            android:id="@+id/family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_family"
            android:layout_weight="1"
            android:text="@string/family" />

        <RadioButton
            android:id="@+id/importantevent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_star"
            android:layout_weight="1"
            android:text="@string/importantevent" />

        <RadioButton
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_school"
            android:layout_weight="1"
            android:text="@string/school" />

        <RadioButton
            android:id="@+id/sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_sport"
            android:layout_weight="1"
            android:text="Sport" />
    </RadioGroup>
</LinearLayout>