<?xml version="1.0" encoding="utf-8"?>

<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoDragView="@+id/dragView"
    sothree:umanoOverlay="true"
    sothree:umanoPanelHeight="12dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoScrollableView="@+id/list"
    sothree:umanoShadowHeight="0dp">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        tools:context=".ui.NoteActivity">

        <ImageButton
            android:id="@+id/deleteNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:elevation="1dp"
            android:src="@drawable/ic_delete_note_white_48dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:elevation="1dp"
            android:src="@drawable/ic_mic_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/startCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:elevation="1dp"
            android:src="@drawable/ic_camera_white_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Contenitore di testi e ImageSticker -->
        <com.cipnote.widget.MotionView
            android:id="@+id/main_motion_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

        <!--Area dove poter disegnare -->
        <com.cipnote.viewmodel.PaintView
            android:id="@+id/paintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <!--Menu per modificare lo stile dei testi -->
        <LinearLayout
            android:id="@+id/main_motion_text_entity_edit_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/text_entity_add_dot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_format_list_bulleted_black_24dp" />

            <!--<ImageButton-->
            <!--android:id="@+id/text_entity_font_size_increase"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/ic_plus_1" />-->

            <ImageButton
                android:id="@+id/text_entity_color_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_format_color_text" />

            <ImageButton
                android:id="@+id/text_entity_font_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_text_fields" />

            <ImageButton
                android:id="@+id/text_entity_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_mode_edit" />

        </LinearLayout>

        <!--Menu per modificare lo stile dei testi -->
        <LinearLayout
            android:id="@+id/main_motion_draw_entity_edit_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/paintView_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_delete_black_24dp" />

            <ImageButton
                android:id="@+id/paintView_stroke_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_plus_1" />

            <ImageButton
                android:id="@+id/paintView_color_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_format_color_fill_black_24dp" />


            <ImageButton
                android:id="@+id/paintView_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_check_24dp" />

        </LinearLayout>

        <!-- Edit Vertical Menu per editare le note -->
        <LinearLayout
            android:id="@+id/vertical_menu_notes"
            android:layout_width="76dp"
            android:layout_height="290dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_motion_text_entity_edit_panel"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/card_item_menu"
            android:elevation="1dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

            <ImageButton
                android:id="@+id/add_draw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_pencil" />

            <ImageButton
                android:id="@+id/add_new_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_text_fields_black_24dp" />

            <ImageButton
                android:id="@+id/checkbox_Image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_insert_emoticon_black_24dp" />

            <!--<ImageButton-->
            <!--android:id="@+id/todoList"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@color/transparent"-->
            <!--android:src="@drawable/ic_check_box" />-->

            <ImageButton

                android:id="@+id/load_calendar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_event_note" />

            <ImageButton
                android:id="@+id/change_background_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/change_background_shape" />

        </LinearLayout>

        <Button
            android:id="@+id/saveNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_background"
            android:elevation="1dp"
            android:text="@string/save"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/deleteNoteButton"
            app:layout_constraintHorizontal_bias="0.0"
            sothree:layout_constraintEnd_toEndOf="parent"
            sothree:layout_constraintStart_toStartOf="parent"
            sothree:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressRecordBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/startCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dragView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_scroll"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/modify_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_mode_edit" />

                <ImageButton
                    android:id="@+id/add_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"

                    android:layout_weight="1"
                    android:src="@drawable/ic_check_box" />

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_text_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>



